src/test/ui/error-codes/E0459.stderr
error[E0459]: `#[link(...)]` specified without `name = "foo"`
  --> $DIR/E0459.rs:1:1
   |
LL | #[link(kind = "dylib")] extern "C" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0459`.
